force-app/main/default/objects/Post_Closing_Section__c/Post_Closing_Section__c.object-meta.xml
<CustomObject>
    <label>Post Closing Section</label>
    <nameField>
        <label>Post Closing Section Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Post Closing Sections</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>