force-app/main/default/objects/Post_Closing_Section__c/fields/mdt_Id__c.field-meta.xml
<CustomField>
    <fullName>mdt_Id__c</fullName>
    <description>Record Id for the Post Close Setting Custom Metadata Type Record</description>
    <inlineHelpText>Record Id for the Post Close Setting Custom Metadata Type Record</inlineHelpText>
    <label>mdt Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>