force-app/main/default/objects/Post_Closing_Section__c/fields/Num_of_Item_Requiring_Follow_Up__c.field-meta.xml
<CustomField>
    <fullName>Num_of_Item_Requiring_Follow_Up__c</fullName>
    <description>Total Number of Post Closing Items that require a follow up</description>
    <inlineHelpText>Total Number of Post Closing Items that require a follow up</inlineHelpText>
    <label># of Item Requiring Follow Up</label>
    <summaryFilterItems>
        <field>Post_Closing_Item__c.Status__c</field>
        <operation>equals</operation>
        <value>Follow-Up</value>
    </summaryFilterItems>
    <summaryForeignKey>Post_Closing_Item__c.Post_Closing_Section__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>