force-app/main/default/objects/Post_Closing_Section__c/fields/Num_of_Items__c.field-meta.xml
<CustomField>
    <fullName>Num_of_Items__c</fullName>
    <description>Total Number of Post Closing Items Required</description>
    <inlineHelpText>Total Number of Post Closing Items Required</inlineHelpText>
    <label># of Items</label>
    <summaryForeignKey>Post_Closing_Item__c.Post_Closing_Section__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>