force-app/main/default/objects/Post_Closing_Section__c/fields/Num_of_Items_Completed__c.field-meta.xml
<CustomField>
    <fullName>Num_of_Items_Completed__c</fullName>
    <description>Total Number of Post Closing Items Received and Reviewed</description>
    <inlineHelpText>Total Number of Post Closing Items Received and Reviewed</inlineHelpText>
    <label># of Items Completed</label>
    <summaryFilterItems>
        <field>Post_Closing_Item__c.Status__c</field>
        <operation>equals</operation>
        <value>Received, Sent to Custodian</value>
    </summaryFilterItems>
    <summaryForeignKey>Post_Closing_Item__c.Post_Closing_Section__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>