force-app/main/default/objects/Post_Closing_Section__c/fields/Num_of_Items_Requiring_Revision__c.field-meta.xml
<CustomField>
    <fullName>Num_of_Items_Requiring_Revision__c</fullName>
    <description>Total Number of Post Closing Items that require a Revision</description>
    <inlineHelpText>Total Number of Post Closing Items that require a Revision</inlineHelpText>
    <label># of Items Requiring Revision</label>
    <summaryFilterItems>
        <field>Post_Closing_Item__c.Status__c</field>
        <operation>equals</operation>
        <value>Pending Revision</value>
    </summaryFilterItems>
    <summaryForeignKey>Post_Closing_Item__c.Post_Closing_Section__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>