force-app/main/default/objects/Post_Closing_Section__c/fields/Post_Closing__c.field-meta.xml
<CustomField>
    <fullName>Post_Closing__c</fullName>
    <label>Post Closing</label>
    <referenceTo>Post_Closing__c</referenceTo>
    <relationshipLabel>Post Closing Sections</relationshipLabel>
    <relationshipName>Post_Closing_Sections</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>